rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__time_dimensions__convert_tz_for_raw_time_dimensions.snap
---
source: cubesqlplanner/src/tests/integration/time_dimensions.rs
expression: result
---
orders__created_at  | orders__created_at_month | orders__count
--------------------+--------------------------+--------------
2024-01-15 02:00:00 | 2024-01-01 00:00:00      | 1            
2024-01-15 07:00:00 | 2024-01-01 00:00:00      | 1            
2024-01-20 06:00:00 | 2024-01-01 00:00:00      | 1            
2024-02-10 01:00:00 | 2024-02-01 00:00:00      | 1            
2024-02-15 03:00:00 | 2024-02-01 00:00:00      | 1            
2024-03-01 08:00:00 | 2024-03-01 00:00:00      | 1            
2024-03-10 00:00:00 | 2024-03-01 00:00:00      | 1            
2024-03-15 05:00:00 | 2024-03-01 00:00:00      | 1            
2024-04-01 03:00:00 | 2024-04-01 00:00:00      | 1
