rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__time_dimensions__time_dimension_date_range_with_filter.snap
---
source: cubesqlplanner/src/tests/integration/time_dimensions.rs
expression: result
---
orders__created_at_month | orders__count
-------------------------+--------------
2024-01-01 00:00:00      | 2            
2024-02-01 00:00:00      | 1            
2024-03-01 00:00:00      | 1
