rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__time_dimensions__time_dimension_day_granularity.snap
---
source: cubesqlplanner/src/tests/integration/time_dimensions.rs
expression: result
---
orders__created_at_day | orders__count | orders__total_amount
-----------------------+---------------+---------------------
2024-01-15 00:00:00    | 2             | 140.00              
2024-01-20 00:00:00    | 1             | 200.00              
2024-02-10 00:00:00    | 1             | 50.00               
2024-02-15 00:00:00    | 1             | 300.00              
2024-03-01 00:00:00    | 1             | 25.00               
2024-03-10 00:00:00    | 1             | 150.00              
2024-03-15 00:00:00    | 1             | 75.00               
2024-04-01 00:00:00    | 1             | 500.00
