rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__time_dimensions__time_dimension_hour_granularity.snap
---
source: cubesqlplanner/src/tests/integration/time_dimensions.rs
expression: result
---
orders__created_at_hour | orders__count
------------------------+--------------
2024-01-15 10:00:00     | 1            
2024-01-15 15:00:00     | 1
