rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__time_dimensions__time_dimension_month_granularity.snap
---
source: cubesqlplanner/src/tests/integration/time_dimensions.rs
expression: result
---
orders__created_at_month | orders__count | orders__total_amount
-------------------------+---------------+---------------------
2024-01-01 00:00:00      | 3             | 340.00              
2024-02-01 00:00:00      | 2             | 350.00              
2024-03-01 00:00:00      | 3             | 250.00              
2024-04-01 00:00:00      | 1             | 500.00
