rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__time_dimensions__time_dimension_no_granularity.snap
---
source: cubesqlplanner/src/tests/integration/time_dimensions.rs
expression: result
---
orders__count | orders__total_amount
--------------+---------------------
5             | 690.00
