rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__time_dimensions__time_dimension_quarter_granularity.snap
---
source: cubesqlplanner/src/tests/integration/time_dimensions.rs
expression: result
---
orders__created_at_quarter | orders__count
---------------------------+--------------
2024-01-01 00:00:00        | 8            
2024-04-01 00:00:00        | 1
